[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = planes
description = Planes of satellites
long_description = Exploring the cause of satellite planes
author = Adrian M. Price-Whelan
author_email = adrn@astro.columbia.edu
license = MIT
url =
edit_on_github = False
github_project = adrn/planes

[entry_points]
astropy-package-template-example = planes.example_mod:main